complete the lec 30-6

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
     // 30-2 Function Default Parameter For Not Provided Values
 
     // 30-3 Template String, Multiple Line String, Dynamic String
+
+    // 30-4 Arrow Function, Multiple Parameter, Function Body
+
+    // 30-5 More Arrow Functions And Big Arrow Function
+
+    // 30-6 Spread Operator, Array Max, Copy Arrays
+
 </script>
     
 </body>
