complete the lec 30-7

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 
     // 30-6 Spread Operator, Array Max, Copy Arrays
 
+    // 30-7 (Advanced) Object And Array Destructure
+
 </script>
     
 </body>
