coding on lec 30-7

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 
     // 30-7 (Advanced) Object And Array Destructure
 
+    // 30-8 Keys, Values, Entries, Delete, Seal, Freeze
+    
+    // 30-9 For Of, For In, Module Summary And Practice Problems
+
 </script>
     
 </body>
